kubernetes/istio/gateways/grafana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - internal-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    - uri:
        prefix: /grafana
    rewrite: 
      uri: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
