kubernetes/istio/gateways/prowlarr-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prowlarr
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - internal-gateway
  http:
  - match:
    rewrite:
      uri: /
    route:
    - destination:
        host: prowlarr.videos.svc.cluster.local
        port:
          number: 9696
