kubernetes/istio/gateways/vault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hashi-vault
  namespace: istio-system
spec:
  hosts:
  - vault.dev.local
  gateways:
  - internal-gateway
  http:
  - match:
    rewrite:
      uri: /
    route:
    - destination:
        host: hashi-vault.vault.svc.cluster.local
        port:
          number: 8200
